--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
+# Next.js / Node.js (old)
 .next
 node_modules
 *.log
 .env.local
 .env.*.local
 .DS_Store
+
+# Rust
+/target/
+**/*.rs.bk
+*.pdb
+Cargo.lock
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
